tests/snapshots/arttrie__shared_prefix.snap
---
source: tests/arttrie_runner.rs
expression: transcript
---
> Start

trie:
  (empty)

root: None
page_count: 1
page_size: 65536
dirty: []
dirties_before_flush: 16
free_lists:
  (none)

=== page 0 (metadata) ===
dirties_before_flush: 16

> insert key="hello" value="world"

trie:
  Leaf [p2s0] key="hello" value="world"

root: page=2 slot=0 size=64
page_count: 3
page_size: 65536
dirty: [0, 1, 2]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

> insert key="help" value="desk"

trie:
  Node4 [p3s0] count=2 prefix="hel"
    'l'/0x6c ->
      Leaf [p2s0] key="hello" value="world"
    'p'/0x70 ->
      Leaf [p2s1] key="help" value="desk"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|
slot[2]: 68 65 6c 70 00 00 00 00  |help....|
slot[3]: 64 65 73 6b 00 00 00 00  |desk....|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 04 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 02 03 00 68 65 6c 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 70 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....hel.............................................................lp..@.......................@...............................................................................................................................................................|

> insert key="helium" value="gas"

trie:
  Node4 [p3s0] count=3 prefix="hel"
    'l'/0x6c ->
      Leaf [p2s0] key="hello" value="world"
    'p'/0x70 ->
      Leaf [p2s1] key="help" value="desk"
    'i'/0x69 ->
      Leaf [p2s2] key="helium" value="gas"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|
slot[2]: 68 65 6c 70 00 00 00 00  |help....|
slot[3]: 64 65 73 6b 00 00 00 00  |desk....|
slot[4]: 68 65 6c 69 75 6d 00 00  |helium..|
slot[5]: 67 61 73 00 00 00 00 00  |gas.....|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 04 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 03 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 03 00 68 65 6c 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 70 69 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....hel.............................................................lpi.@.......................@.......................@.......................................................................................................................................|

> get key="hello"

result: Some("world")
stats: nodes=2 inner=1 edges=1 prefix_bytes=3 leaf_compared=true

trie:
  Node4 [p3s0] count=3 prefix="hel"
    'l'/0x6c ->
      Leaf [p2s0] key="hello" value="world"
    'p'/0x70 ->
      Leaf [p2s1] key="help" value="desk"
    'i'/0x69 ->
      Leaf [p2s2] key="helium" value="gas"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|
slot[2]: 68 65 6c 70 00 00 00 00  |help....|
slot[3]: 64 65 73 6b 00 00 00 00  |desk....|
slot[4]: 68 65 6c 69 75 6d 00 00  |helium..|
slot[5]: 67 61 73 00 00 00 00 00  |gas.....|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 04 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 03 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 03 00 68 65 6c 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 70 69 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....hel.............................................................lpi.@.......................@.......................@.......................................................................................................................................|

> get key="help"

result: Some("desk")
stats: nodes=2 inner=1 edges=1 prefix_bytes=3 leaf_compared=true

trie:
  Node4 [p3s0] count=3 prefix="hel"
    'l'/0x6c ->
      Leaf [p2s0] key="hello" value="world"
    'p'/0x70 ->
      Leaf [p2s1] key="help" value="desk"
    'i'/0x69 ->
      Leaf [p2s2] key="helium" value="gas"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|
slot[2]: 68 65 6c 70 00 00 00 00  |help....|
slot[3]: 64 65 73 6b 00 00 00 00  |desk....|
slot[4]: 68 65 6c 69 75 6d 00 00  |helium..|
slot[5]: 67 61 73 00 00 00 00 00  |gas.....|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 04 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 03 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 03 00 68 65 6c 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 70 69 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....hel.............................................................lpi.@.......................@.......................@.......................................................................................................................................|

> get key="helium"

result: Some("gas")
stats: nodes=2 inner=1 edges=1 prefix_bytes=3 leaf_compared=true

trie:
  Node4 [p3s0] count=3 prefix="hel"
    'l'/0x6c ->
      Leaf [p2s0] key="hello" value="world"
    'p'/0x70 ->
      Leaf [p2s1] key="help" value="desk"
    'i'/0x69 ->
      Leaf [p2s2] key="helium" value="gas"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|
slot[2]: 68 65 6c 70 00 00 00 00  |help....|
slot[3]: 64 65 73 6b 00 00 00 00  |desk....|
slot[4]: 68 65 6c 69 75 6d 00 00  |helium..|
slot[5]: 67 61 73 00 00 00 00 00  |gas.....|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 04 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 03 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 03 00 68 65 6c 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 70 69 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....hel.............................................................lpi.@.......................@.......................@.......................................................................................................................................|
